2009-03-25  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/command/component.py:
	Further fix flumotion-command, after the fallout in r7224.
	See also r7691.

2009-03-25  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/configurationassistant.py:
	Show the translations for the descriptions at scenario step.

2009-03-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Fix discont log message.

2009-03-24  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/consumers/disker/disker.py:
	Fixed a NameError in an exception handler.

2009-03-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/playlist/Makefile.am:
	* flumotion/component/producers/playlist/playlist.dtd:
	Add a DTD somewhat describing the playlist format.

2009-03-23  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/component/bouncers/tokentest.py:
	Make keycardClasses attribute to adhere to the spec.

2009-03-23  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: arkadini

	* flumotion/component/misc/httpserver/httpfile.py:
	Guard against writing pending data to consumers if they already want
	away. Fixes #1257, a really tricky corner case.

2009-03-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: arkadini

	* flumotion/component/misc/httpserver/cachedprovider.py:
	Handle files disappearing from the cache directory while we're
	estimating cache usage. Fixes #1255.

2009-03-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: arkadini

	* flumotion/component/misc/httpserver/ratecontrol.py:
	Prevent proxying pauseProducing calls to producers that have already
	disconnected. Fixes #1256.

2009-03-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/common.py: Now stone age compatible, too!

2009-03-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_pb.py (TestTwisted_PortalAuthChallenger):